tests/ui/consts/non-const-value-in-const-irrefutable-pat-binding.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/non-const-value-in-const-irrefutable-pat-binding.rs:9:17
   |
LL |         const { x }
   |                 ^ non-constant value
   |
help: consider using `const` instead of `let`
   |
LL -     if let x = 1 {
LL +     if const x: /* Type */ = 1 {
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0435`.
